// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`key > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_2__1g4bp0qa"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_28__m4c9ow22"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_default__1g4bp0q2 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_5__1g4bp0qd"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_caption__m4c9owp style_undefined_compound_4__m4c9ow1e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_strong__1g4bp0q3 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_0__1g4bp0q8 styles_undefined_compound_1__1g4bp0q9 styles_undefined_compound_2__1g4bp0qa"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_30__m4c9ow24"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_strong__1g4bp0q3 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_3__1g4bp0qb styles_undefined_compound_4__1g4bp0qc styles_undefined_compound_5__1g4bp0qd"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_disabled_true__m4c9ow1 style_prominence_strong__m4c9ow5 style_sentiment_primary__m4c9owc style_variant_caption__m4c9owp style_undefined_compound_5__m4c9ow1f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_small__1g4bp0q7"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="small"
    >
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_captionSmall__m4c9owq style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q3 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_0__1g4bp0q8"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_prominence_stronger__m4c9ow6 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_2__m4c9ow1c style_undefined_compound_66__m4c9ow34"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q3 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_3__1g4bp0qb"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_prominence_strong__m4c9ow5 style_sentiment_primary__m4c9owc style_variant_caption__m4c9owp style_undefined_compound_1__m4c9ow1b style_undefined_compound_41__m4c9ow2f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;
